--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -13,8 +13,8 @@
 %\setlength{\belowdisplayskip}{-5pt}
 
 \newcommand{\name}{Bundler\xspace}
-\newcommand{\inbox}{In-box\xspace}
-\newcommand{\outbox}{Out-box\xspace}
+\newcommand{\inbox}{in-box\xspace}
+\newcommand{\outbox}{out-box\xspace}
 \begin{document}
 \title{Taking Control of Your Traffic By Living on the Edge \an{better title}}
 
