--- a/eval.tex
+++ b/eval.tex
@@ -1,4 +1,7 @@
 \section{Evaluation}\label{s:eval}
+
+\input{overview-benefits}
+
 \begin{outline}[enumerate]
     \1 Bundler can reduce flow completion times
         \2 Base case with no cross traffic: run empirical traffic generator in the bundle varying offered load from 30\% to 90\%
