continue fighting sharelatex

--- a/eval.tex
+++ b/eval.tex
@@ -1,8 +1,6 @@
 \section{Evaluation}\label{s:eval}
 
-
-
-\input{graphs/overview-benefits}
+\input{overview-benefits}
 
 \begin{outline}[enumerate]
     \1 Bundler can reduce flow completion times
