--- a/graphs/overview-benefits.Rnw
+++ b/graphs/overview-benefits.Rnw
@@ -14,11 +14,11 @@ ggplot(df, aes(x=Duration, linetype=Alg)) +
         limits=c(0.05, 5),
         breaks=c(0.05, 0.1, 0.15, 0.2, 0.25, 0.5, 0.75, 1, 2, 5, 10),
         name="Duration (sec)") +
-#    scale_linetype_manual(
-#        limit=c("copa_sfq", "nobundler_fifo"),
-#        labels=c("copa_sfq" = "Bundler", "nobundler_fifo" = "Baseline"),
-#        values=c("copa_sfq" = "solid", "nobundler_fifo" = "twodash")
-#    ) +
+    scale_linetype_manual(
+        limit=c("copa_sfq", "nobundler_fifo"),
+        labels=c("copa_sfq" = "Bundler", "nobundler_fifo" = "Baseline"),
+        values=c("copa_sfq" = "solid", "nobundler_fifo" = "twodash")
+    ) +
     ylab("CDF") +
     theme_minimal() +
     theme(
