--- a/eval.tex
+++ b/eval.tex
@@ -1,7 +1,39 @@
 \section{Evaluation}\label{s:eval}
 
-\input{overview-benefits}
+We evaluate the following aspects of our design:
+\begin{enumerate}
+    \item To what extent can scheduling policies in \name improve performance?
+    \item Is \name able to shift the bottleneck enough to enforce scheduling policies?
+\end{enumerate}
 
+\subsection{Flow Completion Time}\label{s:eval:fct}
+
+\input{overview-benefits}
+We evaluate our implementation of \name (discussed in \S\ref{s:impl}) using network emulation via mahimahi~\cite{mahimahi}.
+There are three machines in our setup: one machine is a traffic generator, another is configured as a middlebox, and a third is the receiver.
+We run an empirical traffic generator, in which a many-threaded client generates requests from a given request size CDF and sends them to one of $200$ server processes on the traffic generator.
+Each server then responds to the client with the requested amount of data.
+Note that it is important to use many server processes so that the effect of head-of-line blocking on the client requests is limited.
+We then measure the flow completion time of each client request.
+
+We first run \name with no cross traffic.
+On a $96$Mbps link, we generate $84$Mbps of offered request load from a simple CDF with a heavy-tailed mix of short and long requests: 90\% of the requests are less than $5$KB, and 100\% of the requests are less than $1$MB. 
+In addition, there is a persistently backlogged connection inside the traffic aggregate.
+We use a Copa~\cite{copa} congestion controller at the \inbox to manage the bottleneck queue, and the stochastic fair queueing~\cite{sfq} scheduling policy.
+The results are in Figure~\ref{fig:eval:test}.
+With \name, the median flow completion time (FCT) decreases from $147$ms using FIFO scheduling at the bottleneck link to $58$ms with \name: 61\% lower.
+
+Where do these benefits come from? We devote the remainder of this section to exploring this question.
+
+\paragrapha{Necessity of scheduling} It is important to note that \name is not necessarily a means of achieving low end-to-end delays, as promised by recent efforts in congestion control~\cite{copa, nimbus}. 
+To see why this is the case, recall that \name does not modify the end-hosts: they continue to run the default Cubic congestion controller, which will probe for bandwidth until it observes loss.
+Indeed, the packets end-host Cubic sends beyond those the link can transmit must queue somewhere in the network or be lost. Without \name, they queue at the bottleneck link.
+With \name, they instead queue at the \inbox.
+
+We can see this by measuring the relative performance of using FIFO scheduling at the \name compared to the SFQ scheduling in Figure~\ref{fig:eval:test}.
+The results are in Figure~\ref{fig:eval:fifo}. 
+
+\cut{
 \begin{outline}[enumerate]
     \1 Bundler can reduce flow completion times
         \2 Base case with no cross traffic: run empirical traffic generator in the bundle varying offered load from 30\% to 90\%
@@ -28,3 +60,4 @@
     
 
 \end{outline}
+}
