--- a/overview-benefits.tex
+++ b/overview-benefits.tex
@@ -2,9 +2,9 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-1-1} 
+\includegraphics[width=\maxwidth]{figure/eval:best-1} 
 
 \end{knitrout}
-    \caption{\name achieves \an{XX}\% lower FCTs.}
-    \label{fig:eval:test}
+    \caption{\name achieves $61$\% lower FCTs.}
+    \label{fig:eval:best}
 \end{figure}
