--- a/eval.tex
+++ b/eval.tex
@@ -35,7 +35,7 @@ With \name, they instead queue at the \inbox.
 
 We can see this by measuring the relative performance of using FIFO scheduling at the \name compared to the SFQ scheduling in Figure~\ref{fig:eval:best}.
 The results are in Figure~\ref{fig:eval:fifo}. 
-Unsurprisingly, the FCTs with FIFO scheduling at \name are \emph{worse}: with a median FCT of $173$ms, it is $18$\% worse than the baseline.
+Unsurprisingly, the FCTs with FIFO scheduling at \name are \emph{worse}: with a median FCT of $173$ms, it is $18$\% higher than the baseline.
 
 \paragrapha{Impact of congestion control} How does our choice of congestion control impact our results? 
 It is important to choose a congestion control algorithm carefully based on the known or inferred characteristics of the bottleneck link. 
@@ -44,12 +44,13 @@ In this scenario, it is important to control delays. Nimbus and BBR both maintai
 
 \input{congestion-control}
 
+\paragrapha{Offered load} Naturally, if a link is less congested, scheduling the packets that traverse it will have less benefit. Accordingly, as we reduce the offered load in this experiment, we expect the gains from scheduling to diminish. The result is in Figure~\ref{fig:eval:offeredload}.
+
 \cut{
 \begin{outline}[enumerate]
     \1 Bundler can reduce flow completion times
         \2 Base case with no cross traffic: run empirical traffic generator in the bundle varying offered load from 30\% to 90\%
             \3 Rough estimate of current results: 2-3x better for short flows (normalized fct, and only 10-20\% worse for long flows
-            \3 Run with and without FQ scheduling, should still see some benefit from scheduling at lower load since there will be spikes of larger flows
             \3 Show how close bundler is to ideal situation (bottleneck router doing FQ scheduling) without actually having to change the middle of the network
         \2 Add inelastic background traffic
         \2 Add elastic background traffic
