--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}\label{s:intro}
-Most Internet paths today employ first-in, first-out (\emph{FIFO}) scheduling. 
+Most Internet paths today employ first-in, first-out (\emph{FIFO}) scheduling \radhika{}. 
 However, traffic could benefit from different scheduling algorithms.
 The bottleneck link, where congestion occurs and therefore where scheduling is the most useful, is often at the edge of a network, whether an individual device or an autonomous system~\cite{inferring-interdomain-congestion}. 
 As a result, deploying scheduling algorithms on one's own routers is of limited utility; often, the congestion occurs in a router outside of one's control.
