--- a/packages.tex
+++ b/packages.tex
@@ -114,6 +114,6 @@
 \newcommand{\pg}[1]{{\color{blue}\bf PG: {#1}}}
 \newcommand{\fc}[1]{{\color{blue}\bf FC: {#1}}}
 \newcommand{\dr}[1]{{\color{magenta}\bf DR: {#1}}}
-\newcommand{\radhika}[1]{{\color{cyan}\bf RM: {#1}}}
+\newcommand{\radhika}[1]{{\color{magenta}\bf RM: {#1}}}
 %
 \frenchspacing
