--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,2 +1,2 @@
 \section{Conclusion}\label{s:concl}
-This work does not raise any ethical issues.
+\paragrapha{Statement of ethics considerations} This work does not raise any ethical issues.
